--- a/index.html
+++ b/index.html
@@ -4,13 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
+    <title>Project | Sneakers</title>
 </head>
 
 <body>
-    start
+    <!--==================== HEADER ====================-->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">Sneakers</a>
 
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li>
+                        <a href="#" class="nav__link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav__link">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav__link">News</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav__link">Collection</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav__link">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-large-line"></i>
+                </div>
+
+                <div class="nav__social">
+                    <a href="#" class="nav__social-link">
+                        <i class="ri-youtube-line"></i>
+                    </a>
+                    <a href="#" class="nav__social-link">
+                        <i class="ri-twitter-x-line"></i>
+                    </a>
+                    <a href="#" class="nav__social-link">
+                        <i class="ri-instagram-line"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-apps-2-line"></i>
+            </div>
+        </nav>
+    </header>
+
+    <!--==================== MAIN ====================-->
+    <main class="main">
+        <!--==================== HOME ====================-->
+        <section class="home">
+
+        </section>
+    </main>
+
+
+    <script src="./assets/js/swiper-bundle.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
