--- a/index.html
+++ b/index.html
@@ -63,7 +63,82 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home">
+            <div class="home__container">
+                <div class="home__data">
+                    <h3 class="home__subtitle">NEW IN</h3>
 
+                    <div thumbsSlider="" class="home__titles swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <h1 class="home__title">Yeezy Boost <br> 350 V2 Clay</h1>
+                            </div>
+                            <div class="swiper-slide">
+                                <h1 class="home__title">Hyperdunk X <br> TB Urban Red</h1>
+                            </div>
+                            <div class="swiper-slide">
+                                <h1 class="home__title">Air Mag <br> 3000 X1 Future</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a href="#" class="home__button">
+                        Buy Now <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+
+                <div class="home__images">
+                    <div class="home__swiper swiper">
+                        <div class="swiper-wrapper">
+                            <article class="home__article swiper-slide">
+                                <div class="home__card">
+                                    <div class="home__circle home__circle-1"></div>
+                                    <img src="./assets/images/sneaker-1.png" alt="sneakers" class="home__img-1">
+                                    <img src="./assets/images/sneaker-2.png" alt="sneakers" class="home__img-2">
+                                </div>
+                            </article>
+                            <article class="home__article swiper-slide">
+                                <div class="home__card">
+                                    <div class="home__circle home__circle-2"></div>
+                                    <img src="./assets/images/sneaker-3.png" alt="sneakers" class="home__img-1">
+                                    <img src="./assets/images/sneaker-4.png" alt="sneakers" class="home__img-2">
+                                </div>
+                            </article>
+                            <article class="home__article swiper-slide">
+                                <div class="home__card">
+                                    <div class="home__circle home__circle-3"></div>
+                                    <img src="./assets/images/sneaker-5.png" alt="sneakers" class="home__img-1">
+                                    <img src="./assets/images/sneaker-6.png" alt="sneakers" class="home__img-2">
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+
+                <footer class="home__footer">
+                    <div class="home__controls">
+                        <div class="swiper-pagination"></div>
+                        <div class="home__navigation">
+                            <div class="swiper-button-prev">
+                                <i class="ri-arrow-left-line"></i>
+                            </div>
+                            <div class="swiper-button-next">
+                                <i class="ri-arrow-right-line"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="home__social">
+                        <a href="#" class="home__social-link">
+                            <i class="ri-facebook-circle-line"></i>
+                        </a>
+                        <a href="#" class="home__social-link">
+                            <i class="ri-twitter-x-line"></i>
+                        </a>
+                        <a href="#" class="home__social-link">
+                            <i class="ri-instagram-line"></i>
+                        </a>
+                    </div>
+                </footer>
+            </div>
         </section>
     </main>
 
